--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -232,6 +232,10 @@ only screen and (max-width: 768px) {
         font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     }
 
+    .payments_table th:nth-child(1), .payments_table td:nth-child(1) {
+        text-align: left ;
+    }
+
     .payments_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
     .payments_table > tbody > tr > td:nth-of-type(3):before { content: "Date Billed : "; font-weight: bold; }
     .payments_table > tbody > tr > td:nth-of-type(4):before { content: "Transaction ID : ";  font-weight: bold; }
