Password Edit Page design change

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1394,7 +1394,7 @@ a .offer-box:last-child{
 }
 
 #password-reset-container{
-  max-width: 900px;
+  max-width: 100%;
   text-align: center;
   h2{
     font-size: 25px;
