--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <% title 'Password Reset' %>
-<div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper" id="password-reset-container">
+<div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper identity" id="password-reset-container">
   <div class="display-inline-block password-reset-content">
     <% if params[:invitation] %>
         <h2><span class="welcome-user">Hi Mr. <%= params[:user_name].titleize || 'User'  %></span>, Welcome to Brand Reach!!</h2>
