--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -788,10 +788,11 @@ body > .sticky-footer-wrapper{
   z-index: 10;
   height: 3em;
   margin-top: -3em;
+  background-color: rgba(0 , 0, 0, 0.5);
 }
 @media (max-width: 767px)  {
   .footer-non-home-page {
-    height: 70px;
+    height: 60px;
     margin-top: 0;
   }
 }
