--- a/app/views/admin/admins/payment_request.html.erb
+++ b/app/views/admin/admins/payment_request.html.erb
@@ -7,6 +7,10 @@
     <thead>
     <tr>
       <th>Influencer Name</th>
+      <th>Bank Name</th>
+      <th>Account Name</th>
+      <th>Account Number</th>
+      <th>Available Balance</th>
       <th>Withdrawal Amount</th>
       <th>Action</th>
     </tr>
