--- a/app/views/admin/admins/influencer_list.html.erb
+++ b/app/views/admin/admins/influencer_list.html.erb
@@ -15,7 +15,8 @@
       <th>Phone</th>
       <th>Company Name</th>
       <th>Date</th>
-      <th>Action</th>
+      <th>Deactivate</th>
+      <th>Delete</th>
     </tr>
     </thead>
     <tbody>
