--- a/app/views/admin/admins/_user.html.erb
+++ b/app/views/admin/admins/_user.html.erb
@@ -22,11 +22,8 @@
           <h5>ACTIVATE</h5>
         </a>
     <% end %>
-
-    <%= link_to 'javascript:;', class: 'js-remove-user text-red', data: { id: user.id } do %>
-        <h5>DELETE</h5>
-    <% end %>
   </td>
+  <td><%= link_to image_tag('trash-icon.png'), 'javascript:;', class: 'js-remove-user', data: {id: user.id } %></td>
 </tr>
 
 <script>
