--- a/app/views/admin/admins/brands_request.html.erb
+++ b/app/views/admin/admins/brands_request.html.erb
@@ -17,7 +17,8 @@
       <th>Phone</th>
       <th>Company</th>
       <th>Date</th>
-      <th>Action</th>
+      <th>Deactivate</th>
+      <th>Delete</th>
     </tr>
     </thead>
     <tbody>
