--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -109,7 +109,7 @@
                 <%= f.label '', 'Schedule Post', class: 'control-label' %>
                 <div class="display-inline">
                   <div class="display-inline">
-                    <%= f.radio_button :schedule_type, 'daily', { :checked => true, class: 'daily btn-radio' } %>
+                    <%= f.radio_button :schedule_type, 'ongoing', { :checked => true, class: 'daily btn-radio' } %>
                     <span>Run my ad set continuously starting today</span>
                   </div>
 
