--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -1066,3 +1066,93 @@ only screen and (max-width: 768px) {
 .payment-information dt, .payment-information dd {
     line-height: 1.8;
 }
+
+/* on-off switching button style sheet */
+.onoffswitch {
+    position: relative;
+    width: 66px;
+    display: inline-block;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
+.onoffswitch-checkbox {
+    display: none;
+}
+
+.onoffswitch-label {
+    display: block;
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: 50px;
+    width: 66px;
+    margin-bottom: 0;
+    box-shadow: 0 0 2px 3px #cecece;
+    -webkit-box-shadow: 0 0 2px 3px #cecece;
+    -moz-box-shadow: 0 0 2px 3px #cecece;
+    -o-box-shadow: 0 0 2px 3px #cecece;
+
+}
+
+.onoffswitch-inner {
+    display: block;
+    width: 200%;
+    margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block;
+    float: left;
+    width: 50%;
+    height: 25px;
+    padding: 0;
+    line-height: 25px;
+    font-size: 10px;
+    color: white;
+    font-family: Trebuchet, Arial, sans-serif;
+    font-weight: bold;
+    box-sizing: border-box;
+}
+
+.onoffswitch-inner:before {
+    content: "O";
+    padding-left: 10px;
+    background-color: #ff3059;
+    color: #FFFFFF;
+}
+
+.onoffswitch-inner:after {
+    content: "x";
+    padding-right: 10px;
+    background-color: #dedede;
+    color: #b9b9b9;
+    text-align: right;
+}
+
+.onoffswitch-switch {
+    display: block;
+    height: 20px;
+    width: 20px;
+    margin: 2.5px;
+    background: #F2F6F7;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 37px;
+    /*border: 2px solid #F5F0F0;*/
+    border-radius: 50px;
+    transition: all 0.3s ease-in 0s;
+    box-shadow: inset 0px 0px 0px 2px #ebebeb;
+}
+
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px;
+    background-color: #F2F6F7;
+}
+/* end of on-off switch style */
