--- a/app/views/offers/_offer.erb
+++ b/app/views/offers/_offer.erb
@@ -30,36 +30,9 @@
 
     <div class="action">
       <% if current_user.influencer? %>
-          <% if offer.waiting? %>
-              <%= link_to 'Accept', accept_offer_path(offer, authenticity_token: form_authenticity_token), class: 'btn btn-accept button-border-blue', method: :put, remote: true %>
-              &nbsp;
-              <%= link_to 'Deny', deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'deny', method: :put, remote: true %>
-              <%= link_to 'Undo Deny', undo_deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'undo-deny hidden', method: :put, remote: true %>
-          <% elsif offer.denied? %>
-              <% if offer.deny_undo_able? %>
-                  <%= link_to 'Accept', accept_offer_path(offer, authenticity_token: form_authenticity_token), class: 'btn btn-accept hidden', method: :put, remote: true %>
-                  <%= link_to 'Deny', deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'deny hidden', method: :put, remote: true %>
-                  <%= link_to 'Undo Deny', undo_deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'undo-deny', method: :put, remote: true %>
-              <% else %>
-                  <span class="text-danger">Denied Campaign</span>
-              <% end %>
-          <% elsif offer.engaged? %>
-              <span class="text-success">Running Campaign</span>
-          <% else %>
-              <span class="text-success">Accepted Campaign</span>
-          <% end %>
+          <%= render partial: 'influencer_action_link', locals: { offer: offer} %>
       <% else %>
-          <% if offer.engaged? %>
-              <span class="text-success">Running Campaign</span>
-          <% elsif offer.deleted_by_influencer? %>
-              <span class="text-danger">Offer deleted</span>
-          <% elsif offer.accepted? %>
-              <%= link_to 'Engage', new_brand_payment_campaigns_path(id: offer.id), class: 'btn btn-accept button-border-blue engage' %>
-          <% elsif offer.denied? %>
-              <span class="text-danger">Offer denied</span>
-          <% else %>
-              Pending request
-          <% end %>
+          <%= render partial: 'brand_action_link', locals: { offer: offer} %>
       <% end %>
     </div>
 
