--- a/app/views/admin/admins/brand_list.html.erb
+++ b/app/views/admin/admins/brand_list.html.erb
@@ -18,8 +18,8 @@
       <th>Company Name</th>
       <th>Date</th>
       <th>Reset Password</th>
-      <th>Deactivate</th>
-      <th>Delete</th>
+      <th>Action</th>
+      <th></th>
     </tr>
     </thead>
     <tbody>
