--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -3,7 +3,7 @@
   <div class="display-inline-block password-reset-content">
     <% if params[:invitation] %>
         <h2><span class="welcome-user">Hi Mr. <%= params[:user_name].titleize || 'User'  %></span>, Welcome to Brand Reach!!</h2>
-        <p>Your sing up process is almost complete. Just set your password and start to use it.</p>
+        <p>Your sign up process is almost complete. Just set your password and start to use it.</p>
         <br/>
         <br/>
         <p>Please set your password.</p>
