--- a/app/views/admin/admins/_user.html.erb
+++ b/app/views/admin/admins/_user.html.erb
@@ -23,9 +23,13 @@
         </a>
     <% end %>
   </td>
-  <td><%= link_to image_tag('trash-icon.png'), 'javascript:;', class: 'js-remove-user', data: {id: user.id } %></td>
+  <td><%= link_to image_tag('trash-icon.png'), 'javascript:;', class: 'js-remove-user', title: 'delete', data: {id: user.id, toggle: 'pop' } %></td>
 </tr>
 
 <script>
   $('.user-password-change')
+
+  $(document).ready(function () {
+      $('[data-toggle="pop"]').popover({trigger: 'hover', placement: "bottom"});
+  });
 </script>
