--- a/app/views/campaign_mailer/notify_campaign_pause.html.erb
+++ b/app/views/campaign_mailer/notify_campaign_pause.html.erb
@@ -1,2 +1,3 @@
 <h4>Hi, <%= @receiver.full_name %></h4>
-<p> Your Campaign <strong><%= @campaign.name %></strong> has been paused by brand.</p>
+<p> Your campaign <strong><%= @campaign.name %></strong> has been paused by brand.</p>
+<P><%= @message %></P>
