set campaign status text color

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1857,3 +1857,23 @@ div.modal-content{
     margin-top: -10px;
   }
 }
+
+.text-color-pause{
+  color: #89052A;
+}
+
+.text-color-stop{
+  color: #77060C;
+}
+
+.text-color-accept{
+  color: #00B6B3;
+}
+
+.text-color-engage{
+  color: green;
+}
+.text-color-waiting{
+  color: #22448E;
+}
+
