--- a/app/views/offers/_brand_action_link.erb
+++ b/app/views/offers/_brand_action_link.erb
@@ -1,9 +1,9 @@
 <% if offer.engaged? %>
-    <span class="text-success">Running Campaign</span>
+    <span class="text-color-engage">Running Campaign</span>
 <% elsif offer.paused? %>
-    <span class="text-success">Paused Campaign</span>
-<% elsif offer.engaged? %>
-    <span class="text-red">Stopped Campaign</span>
+    <span class="text-color-pause">Paused Campaign</span>
+<% elsif offer.stopped? %>
+    <span class="text-color-stop">Stopped Campaign</span>
 <% elsif offer.deleted_by_influencer? %>
     <span class="text-danger">Offer deleted</span>
 <% elsif offer.accepted? %>
@@ -11,5 +11,5 @@
 <% elsif offer.denied? %>
     <span class="text-danger">Offer denied</span>
 <% else %>
-    Pending request
+    <span class="text-color-waiting">Pending request</span>
 <% end %>
