Login_input background color change for login and sign up form

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -884,7 +884,7 @@ th {
 }
 
 .login_input {
-  background: #fffff0 none repeat scroll 0 0;
+  background: #eeeeed none repeat scroll 0 0;
   border: medium none;
   color: #666;
   float: left;
