Sign up form: Margin top and bottom synchronized

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -899,7 +899,11 @@ th {
 }
 
 #brand-signup {
-  margin: 0 0 30px;
+  margin: 0 0 15px;
+}
+
+#company-short-bio {
+ padding: 5px;
 }
 
 #signup .modal-dialog {
