--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -530,8 +530,12 @@ only screen and (max-width: 768px) {
 }
 
 .bank-account-modal .bank-account-country {
-    width: 140px;
+    width: 200px;
     background-color: white;
+}
+
+.bank-account-modal input, .bank-account-modal select {
+    width: 200px;
 }
 
 .bank_location {
@@ -556,7 +560,7 @@ only screen and (max-width: 768px) {
         text-align: center;
     }
 
-    .bank-account-modal .bank-account-country {
+    .bank-account-modal .bank-account-country, .bank-account-modal input, .bank-account-modal select {
         width: 100%;
     }
 
