--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1707,7 +1707,7 @@ a .offer-box:last-child{
 
 .btn-inf-payment-download {
   @extend  .br-btn-primary;
-  margin: -5px 3px 15px 5px;
+  margin: -5px 0 15px 5px;
   padding: 5px 20px 5px 20px;
   @media (max-width: 768px) {
     width: 100%;
