--- a/app/views/campaigns/new_brand_payment.html.erb
+++ b/app/views/campaigns/new_brand_payment.html.erb
@@ -53,10 +53,9 @@
     <dt>Type of Post </dt> <dd><%= @campaign.post_type.humanize %></dd>
     <dt>Start Date </dt> <dd><%= @campaign.start_date.try(:strftime, '%d-%m-%Y') || 'NA' %></dd>
     <dt>End Date </dt> <dd><%= @campaign.end_date.try(:strftime, '%d-%m-%Y') || 'NA' %></dd>
+    <dt>Heading </dt> <dd><%= @campaign.headline %></dd>
+    <dt>Description </dt> <dd><%= @campaign.text %></dd>
     <dt>Payment </dt> <dd><%= @campaign.cost %> INR</dd>
-    <br/>
-    <dt>Campaign Heading </dt> <dd><%= @campaign.headline %></dd>
-    <dt>Campaign Description </dt> <dd><%= @campaign.text %></dd>
   </dl>
 
   <form method="post" action="https://test.ccavenue.com/transaction/transaction.do?command=initiateTransaction">
