--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -12,6 +12,7 @@
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
     line-height: 1.2;
+    padding-bottom: 7px;
 }
 
 .table > tbody > tr > td {
@@ -21,6 +22,7 @@
     color: #666666;
     vertical-align: middle;
     line-height: 1.2;
+    padding-bottom: 7px;
 }
 
 .space {
