solve new campaign page start date enable disable issues

--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -354,6 +354,7 @@
         function enableSetDate(){
             $('.date-range').removeAttr('disabled');
             $('.date-range').removeAttr('checked');
+            $('.daily').prop('checked', 'checked');
         }
 
    /*============ new campaign image upload form trigger ====*/
