--- a/app/assets/stylesheets/influencers_home.scss
+++ b/app/assets/stylesheets/influencers_home.scss
@@ -52,11 +52,11 @@
   padding-top: 8%;
 
   .modal-body{
-    padding: 30px 30px 25px;
+    padding: 30px;
   }
 
   .modal-header{
-    padding: 15px 30px;
+    padding: 20px 30px;
   }
 
   p{
