Retina Image added for About us > Identify image

--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -48,7 +48,7 @@
 
     <div class="about-us-block-container">
       <div class="about-us-block">
-        <span class="image"><%= image_tag('Identify.png') %></span>
+        <span class="image"><%= image_tag('Identify.svg') %></span>
         <span class="textual"> Identify </span>
       </div>
       <div class="about-us-block">
