About us Section Retina Image added

--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -50,23 +50,23 @@
 
     <div class="about-us-block-container">
       <div class="about-us-block">
-        <span class="image"><%= image_tag('Identify.png') %></span>
+        <span class="image"><%= image_tag('Identify.svg') %></span>
         <span class="textual"> Identify </span>
       </div>
       <div class="about-us-block">
-        <span class="image"> <%= image_tag('Leverage-Content.png') %></span>
+        <span class="image"> <%= image_tag('Leverage.svg') %></span>
         <span class="textual leverage"> Leverage content across platforms</span>
       </div>
       <div class="about-us-block">
-        <span class="image"><%= image_tag('Scale-your-influence.png') %></span>
+        <span class="image"><%= image_tag('Scale.svg') %></span>
         <span class="textual scale"> Scale your influence </span>
       </div>
       <div class="about-us-block">
-        <span class="image"><%= image_tag('Measure.png') %></span>
+        <span class="image"><%= image_tag('Measure.svg') %></span>
         <span class="textual"> Measure </span>
       </div>
       <div class="about-us-block">
-        <span class="image"><%= image_tag('Technology.png') %></span>
+        <span class="image"><%= image_tag('Technology.svg') %></span>
         <span class="textual"> Technology </span>
       </div>
     </div>
