--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -75,7 +75,7 @@
   <div class="wrapper-content">
     <div class="text-top few-brand helvetica-neue-light">Few of our Influencers</div>
     <div class="brands-block">
-      <span><a href="#" data-toggle="popover" title="2.3M Followers"><%= image_tag('tom-cruise.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" data-toggle="popover" title="2.3M Followers"><%= image_tag('Hrithik_Roshan.png', :class => 'influencers-picture') %></a></span>
       <span><a href="#" data-toggle="popover" title="2.5M Followers"><%= image_tag('Akshay-kumar.png', :class => 'influencers-picture') %></a></span>
       <span><a href="#" data-toggle="popover" title="2.9M Followers"><%= image_tag('shahrukh-khan.png', :class => 'influencers-picture') %></a></span>
       <span><a href="#" data-toggle="popover" title="1.3M Followers"><%= image_tag('katrina-kaif.png', :class => 'influencers-picture') %></a></span>
