add photo post image for new campaign

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -927,6 +927,7 @@ only screen and (max-width: 480px) {
 
 .new-campaign-tab-content .image-icon{
     padding-right: 10px;
+    cursor: pointer;
 }
 
 @media
