update campaign pause/restart mail message

--- a/app/views/campaign_mailer/notify_campaign_pause.html.erb
+++ b/app/views/campaign_mailer/notify_campaign_pause.html.erb
@@ -1,3 +1,3 @@
 <h4>Hi, <%= @receiver.full_name %></h4>
-<p> Your campaign <strong><%= @campaign.name %></strong> has been paused by brand.</p>
+<p> <strong><%= @brand.name %></strong> paused campaign <strong><%= @campaign.name %></strong>.</p>
 <P><%= @message %></P>
