--- a/app/views/campaign_mailer/notify_campaign_stop.html.erb
+++ b/app/views/campaign_mailer/notify_campaign_stop.html.erb
@@ -1,3 +1,3 @@
 <h4>Hi, <%= @receiver.full_name %></h4>
-<p> Your campaign <strong><%= @campaign.name %></strong> has been stopped by brand.</p>
+<p> <strong><%= @brand.name.capitalize %></strong> restarted campaign <strong><%= @campaign.name %></strong>.</p>
 <P><%= @message %></P>
